<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/color_fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ticket">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/Empresa"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Empresa"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Direcc"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_below="@+id/Empresa"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="18dp"
        android:text="@string/Direcc"
        android:textColor="@color/Letra1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_below="@+id/Direcc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:text="Fecha"
        android:textColor="@color/Letra1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Pedido"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_below="@+id/Fecha"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="294dp"
        android:text="Pedido: "
        android:textColor="@color/Usuario"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/LVF1"
        android:layout_width="411dp"
        android:layout_height="244dp"
        android:layout_below="@+id/Pedido"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="1dp"
        android:textColor="@color/Amarillo" />

    <TextView
        android:id="@+id/Ttl"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_below="@+id/LVF1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:text="Total: "
        android:textColor="@color/Letra"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_below="@+id/LVF1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="144dp"
        android:layout_toEndOf="@+id/Ttl"
        android:text="00.00"
        android:textColor="@color/Negro"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnComprarF1"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_below="@+id/Total"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="124dp"
        android:text="Finalizar Compra"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Frase"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnComprarF1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:text="@string/Agradecimiento"
        android:textColor="@color/Usuario"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Link"
        android:layout_width="205dp"
        android:layout_height="34dp"
        android:layout_below="@+id/Frase"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="0dp"
        android:text="www.ladulceesencia.com"
        android:textColor="@color/Letra1"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>