<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/color_fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="665dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="1dp">

            <!-- Categorías -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/imgCategoria1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pasteles"
                        android:contentDescription="@string/pasteles" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pasteles"
                        android:textColor="@color/Negro"
                        android:textSize="16sp"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/imgCategoria2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_background"
                        android:contentDescription="@string/cupcakes"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cupcakes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="CupCakes"
                        android:textColor="@color/Negro"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/imgCategoria3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_background"
                        android:contentDescription="@string/tartas"
                        android:scaleType="centerCrop"
                        android:src="@drawable/tartas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tartas"
                        android:textColor="@color/Negro"
                        android:textSize="16sp"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <!-- Más Vendidos -->
            <TextView
                android:id="@+id/tvMasVendido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Productos Más Vendidos"
                android:textColor="@color/Negro"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerMasVendido"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="Slider de productos más vendidos"
                    android:importantForAccessibility="yes" />
            </LinearLayout>

            <!-- Recomendados -->
            <TextView
                android:id="@+id/tvRecomendado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Recomendaciones"
                android:textColor="@color/Negro"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerRecomendado"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="Slider de productos recomendados"
                    android:importantForAccessibility="yes" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
